--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -15,7 +15,7 @@
     <script type="module" src="./js/1-timer.js" defer></script>
   </head>
   <body>
-    <a href="./index.html" target="_blank" rel="noopener noreferrer">Back</a>
+    <a href="./index.html" target="_self" rel="noopener noreferrer">Back</a>
 
     <input type="text" id="datetime-picker" />
 
